--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Адвокат Каленський Владислав</title>
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,19 +16,27 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <style>
-      .rounded-img {
-        width: 60%;
-        border-radius: 50%;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-        padding: 0.6em;
-        margin-bottom: 1em;
-      }
-    </style>
-  <link rel="apple-touch-icon" sizes="180x180" href="/IMG/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/IMG/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/IMG/favicon-16x16.png">
-  <link rel="manifest" href="/IMG/site.webmanifest">
+    <link
+      class="logo"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/IMG/apple-touch-icon.png"
+    />
+    <link
+      class="logo"
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/IMG/favicon-32x32.png"
+    />
+    <link
+      class="logo"
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/IMG/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/IMG/site.webmanifest" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -50,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="contacts.html">КОНТАКТИ</a>
+              <a class="nav-link" href="publ.html">ПУБЛІКАЦІЇ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="poslygu.html">ПОСЛУГИ</a>
@@ -69,8 +78,10 @@
           />
           <h1 class="fw-light">Адвокат Каленський Владислав</h1>
           <p class="lead" text-muted>
-            Персональний сайт приватного адвоката. 
-            <br> Цікави кейси, авторські юридичні статті та правозахистна діяльність.</br>
+            Персональний сайт приватного адвоката.
+            <br />
+            Цікави кейси, обмін досвідом, авторські юридичні статті та
+            правозахистна діяльність.
           </p>
           <a
             href="https://www.facebook.com/advkalenskiy"
@@ -93,15 +104,98 @@
           >
             Telegram
           </a>
-          <a
-            href="https://www.youtube.com/channel/UCNufZAJHGddkV6T9Rp2UoMQ"
-            target="_blank"
-            class="btn btn-secondary"
-          >
-            Youtube
-          </a>
         </div>
       </div>
     </div>
   </body>
+  <footer class="footer">
+    <div class="footer__addr">
+      <h1 class="footer__logo">Адвокат Каленський Владислав</h1>
+  
+      <h2>Адреса офісу</h2>
+  
+      <address>
+        вул. Будівельників, 38/14, Київ, Україна<br>
+  
+        <a class="footer__btn" href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
+      </address>
+    </div>
+  
+    <ul class="footer__nav">
+      <li class="nav__item">
+        <h2 class="nav__title">Rewards</h2>
+  
+        <ul class="nav__ul">
+          <li>
+            <a href="#">Join Now</a>
+          </li>
+  
+          <li>
+            <a href="#">Learn More</a>
+          </li>
+  
+          <li>
+            <a href="#">Manage Account</a>
+          </li>
+        </ul>
+      </li>
+  
+      <li class="nav__item">
+        <h2 class="nav__title">News & Info</h2>
+  
+        <ul class="nav__ul">
+          <li>
+            <a href="#">Press Releases</a>
+          </li>
+  
+          <li>
+            <a href="#">About Our Products</a>
+          </li>
+  
+          <li>
+            <a href="#">Product Support</a>
+          </li>
+  
+          <li>
+            <a href="#">Product Manuals</a>
+          </li>
+  
+          <li>
+            <a href="#">Product Registration</a>
+          </li>
+  
+          <li>
+            <a href="#">Newsletter Sign Up</a>
+          </li>
+        </ul>
+      </li>
+  
+      <li class="nav__item">
+        <h2 class="nav__title">Support</h2>
+  
+        <ul class="nav__ul">
+          <li>
+            <a href="#">FAQ</a>
+          </li>
+  
+          <li>
+            <a href="#">Help Desk</a>
+          </li>
+  
+          <li>
+            <a href="#">Forums</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  
+    <div class="legal">
+      <p>&copy; 2022 Copyright.</p>
+  
+    </div>
+  </footer>
+  
+  
+  </body>
+  </html>
 </html>
