--- a/poslygu.html
+++ b/poslygu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ПОСЛУГИ</title>
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,38 +17,26 @@
       crossorigin="anonymous"
     ></script>
     <link
+      class="logo"
       rel="apple-touch-icon"
       sizes="180x180"
       href="/IMG/apple-touch-icon.png"
     />
     <link
+      class="logo"
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="/IMG/favicon-32x32.png"
     />
     <link
+      class="logo"
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="/IMG/favicon-16x16.png"
     />
     <link rel="manifest" href="/IMG/site.webmanifest" />
-    <style>
-      .card {
-        border-radius: 1em;
-        text-align: center;
-        padding: 1em;
-      }
-      .card:hover {
-        background-color: rgba(0, 0, 0, 0.1);
-      }
-      .card img {
-        border-radius: 50%;
-        width: 60%;
-        margin: auto;
-      }
-    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -70,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="contacts.html">КОНТАКТИ</a>
+              <a class="nav-link" href="publ.html">ПУБЛІКАЦІЇ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="poslygu.html">ПОСЛУГИ</a>
@@ -83,21 +72,14 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
           <div class="card">
-            <img
-              src="https://picsum.photos/id/177/300"
-              class="card-img-top"
-              alt="..."
-            />
+            <img src="/IMG/family.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Сімейне право</h5>
+              <h5 class="card-title">Сімейний адвокат</h5>
               <p class="card-text">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a
-                href="https://picsum.photos/id/177/1000"
-                target="_blank"
-                class="btn btn-primary"
+              <a href="IMG/family.png" target="_blank" class="btn btn-primary"
                 >Дізнатись більше</a
               >
             </div>
@@ -127,21 +109,14 @@
         </div>
         <div class="col">
           <div class="card">
-            <img
-              src="https://picsum.photos/id/124/300"
-              class="card-img-top"
-              alt="..."
-            />
+            <img src="/IMG/napus.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Оскарження виконавчого напису</h5>
               <p class="card-text">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a
-                href="https://picsum.photos/id/124/1000"
-                target="_blank"
-                class="btn btn-primary"
+              <a href="/IMG/napus.jpg" target="_blank" class="btn btn-primary"
                 >Дізнатись більше</a
               >
             </div>
@@ -150,4 +125,92 @@
       </div>
     </div>
   </body>
+  <footer class="footer">
+    <div class="footer__addr">
+      <h1 class="footer__logo">Адвокат Каленський Владислав</h1>
+  
+      <h2>Contact</h2>
+  
+      <address>
+        вул. Будівельників, 38/14, Київ, Україна<br>
+  
+        <a class="footer__btn" href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
+      </address>
+    </div>
+  
+    <ul class="footer__nav">
+      <li class="nav__item">
+        <h2 class="nav__title">Rewards</h2>
+  
+        <ul class="nav__ul">
+          <li>
+            <a href="#">Join Now</a>
+          </li>
+  
+          <li>
+            <a href="#">Learn More</a>
+          </li>
+  
+          <li>
+            <a href="#">Manage Account</a>
+          </li>
+        </ul>
+      </li>
+  
+      <li class="nav__item">
+        <h2 class="nav__title">News & Info</h2>
+  
+        <ul class="nav__ul">
+          <li>
+            <a href="#">Press Releases</a>
+          </li>
+  
+          <li>
+            <a href="#">About Our Products</a>
+          </li>
+  
+          <li>
+            <a href="#">Product Support</a>
+          </li>
+  
+          <li>
+            <a href="#">Product Manuals</a>
+          </li>
+  
+          <li>
+            <a href="#">Product Registration</a>
+          </li>
+  
+          <li>
+            <a href="#">Newsletter Sign Up</a>
+          </li>
+        </ul>
+      </li>
+  
+      <li class="nav__item">
+        <h2 class="nav__title">Support</h2>
+  
+        <ul class="nav__ul">
+          <li>
+            <a href="#">FAQ</a>
+          </li>
+  
+          <li>
+            <a href="#">Help Desk</a>
+          </li>
+  
+          <li>
+            <a href="#">Forums</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  
+    <div class="legal">
+      <p>&copy; 2022 Copyright.</p>
+  
+    </div>
+  </footer>
+  </body>
+  </html>
 </html>
