--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <a class="nav-link" href="publ.html">ПУБЛІКАЦІЇ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="poslygu.html">ПОСЛУГИ</a>
+              <a class="nav-link" href="poslygu.html">ПРАКТИКИ</a>
             </li>
           </ul>
         </div>
@@ -112,30 +112,33 @@
     <div class="footer__addr">
       <h1 class="footer__logo">Адвокат Каленський Владислав</h1>
   
-      <h2>Адреса офісу</h2>
+      <h2>Адреса офісу та контактний номер адвоката:</h2>
   
       <address>
-        вул. Будівельників, 38/14, Київ, Україна<br>
-  
-        <a class="footer__btn" href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
+        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">вул. Будівельників, 38/14, Київ, Україна</a>
+        <a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a>
       </address>
     </div>
   
     <ul class="footer__nav">
       <li class="nav__item">
-        <h2 class="nav__title">Rewards</h2>
+        <h2 class="nav__title">Соціальні сторінки адвоката</h2>
   
         <ul class="nav__ul">
           <li>
-            <a href="#">Join Now</a>
+            <a href="https://www.facebook.com/advkalenskiy/">Facebook</a>
           </li>
   
           <li>
-            <a href="#">Learn More</a>
+            <a href="https://www.instagram.com/kalenskiy_advocate/">Instagram</a>
           </li>
   
           <li>
-            <a href="#">Manage Account</a>
+            <a href="https://t.me/adv_kalenskiy">Telegram</a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com/adv_kalenskiy">Twitter</a>
           </li>
         </ul>
       </li>
@@ -171,15 +174,15 @@
       </li>
   
       <li class="nav__item">
-        <h2 class="nav__title">Support</h2>
+        <h2 class="nav__title">Підтримка</h2>
   
         <ul class="nav__ul">
           <li>
-            <a href="#">FAQ</a>
+            <a href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
           </li>
   
           <li>
-            <a href="#">Help Desk</a>
+            <a href="Зразковий примірник договору.pdf">Завантажити примірник договору</a>
           </li>
   
           <li>
