--- a/poslygu.html
+++ b/poslygu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ПОСЛУГИ</title>
+    <title>ПРАКТИКИ</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -62,7 +62,7 @@
               <a class="nav-link" href="publ.html">ПУБЛІКАЦІЇ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="poslygu.html">ПОСЛУГИ</a>
+              <a class="nav-link active" href="poslygu.html">ПРАКТИКИ</a>
             </li>
           </ul>
         </div>
@@ -72,15 +72,14 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
           <div class="card">
-            <img src="/IMG/family.png" class="card-img-top" alt="..." />
+            <img src="/IMG/family.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Сімейний адвокат</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Адвокат по сімейним справам - це юрист, який займається врегулюванням сімейних спорів та попереджає сімейні конфлікти. Орієнтовний перелік послуг: укладання шлюбного контракту, призначення та визначенням розміру аліментів, розірвання шлюбу, визначення місця проживання дитини, розподіл спільного майна, встановлення або оспорювання батьківства.
               </p>
-              <a href="IMG/family.png" target="_blank" class="btn btn-primary"
-                >Дізнатись більше</a
+              <a href="tel:+380508538483" target="_blank" class="btn btn-primary"
+                >Замовити послугу</a
               >
             </div>
           </div>
@@ -129,30 +128,33 @@
     <div class="footer__addr">
       <h1 class="footer__logo">Адвокат Каленський Владислав</h1>
   
-      <h2>Contact</h2>
+      <h2>Адреса офісу та контактний номер адвоката:</h2>
   
       <address>
-        вул. Будівельників, 38/14, Київ, Україна<br>
-  
-        <a class="footer__btn" href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
+        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">вул. Будівельників, 38/14, Київ, Україна</a>
+        <a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83 </a>
       </address>
     </div>
   
     <ul class="footer__nav">
       <li class="nav__item">
-        <h2 class="nav__title">Rewards</h2>
+        <h2 class="nav__title">Соціальні сторінки адвоката</h2>
   
         <ul class="nav__ul">
           <li>
-            <a href="#">Join Now</a>
+            <a href="https://www.facebook.com/advkalenskiy/">Facebook</a>
           </li>
   
           <li>
-            <a href="#">Learn More</a>
+            <a href="https://www.instagram.com/kalenskiy_advocate/">Instagram</a>
           </li>
   
           <li>
-            <a href="#">Manage Account</a>
+            <a href="https://t.me/adv_kalenskiy">Telegram</a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com/adv_kalenskiy">Twitter</a>
           </li>
         </ul>
       </li>
@@ -188,15 +190,15 @@
       </li>
   
       <li class="nav__item">
-        <h2 class="nav__title">Support</h2>
+        <h2 class="nav__title">Підтримка</h2>
   
         <ul class="nav__ul">
           <li>
-            <a href="#">FAQ</a>
+            <a href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
           </li>
   
           <li>
-            <a href="#">Help Desk</a>
+            <a href="Зразковий примірник договору.pdf">Завантажити примірник договору</a>
           </li>
   
           <li>
