--- a/poslygu.html
+++ b/poslygu.html
@@ -72,7 +72,7 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
         <div class="col">
           <div class="card">
-            <img src="/IMG/family.jpg" class="card-img-top" alt="..." />
+            <img src="/IMG/1.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Сімейний адвокат</h5>
               <p class="card-text">
@@ -87,36 +87,31 @@
         <div class="col">
           <div class="card">
             <img
-              src="https://picsum.photos/id/110/300"
+              src="/IMG/2.png"
               class="card-img-top"
               alt="..."
             />
             <div class="card-body">
               <h5 class="card-title">Житлове право</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Якщо виникла загроза позбутись житла, свої права необхідно захищати. Найбільш типові справи в сфері житлового права визнання права власності на житло, в тому числі в порядку спадкування; розірвання договору обміну, дарування, ренти, купівлі-продажу, безоплатного користування, найму, оренди житла та інших; майнові права подружжя на квартиру; оскарження відмови в реєстрації громадянина за місцем проживання, приватизації житла тощо; вселення в житлове приміщення та виселення з нього.
               </p>
-              <a
-                href="https://picsum.photos/id/110/1000"
-                target="_blank"
-                class="btn btn-primary"
-                >Дізнатись більше</a
+              <a href="tel:+380508538483" target="_blank" class="btn btn-primary"
+                >Замовити послугу</a
               >
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/IMG/napus.jpg" class="card-img-top" alt="..." />
+            <img src="/IMG/3.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Оскарження виконавчого напису</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Протягом останніх двох років фінансові та колекторські компанії масово змушують боржників повертати кредитні борги на підставі нотаріальних написів. На підставі свого досвіду та аналізу судової практики я допоможу вам розібратися з усіма правовими нюансами стосовно нотаріального напису. Ми чітко окреслимо обґрунтування визнання даного виконавчого документа незаконним у суді.
               </p>
-              <a href="/IMG/napus.jpg" target="_blank" class="btn btn-primary"
-                >Дізнатись більше</a
+              <a href="tel:+380508538483" target="_blank" class="btn btn-primary"
+                >Замовити послугу</a
               >
             </div>
           </div>
@@ -131,7 +126,7 @@
       <h2>Адреса офісу та контактний номер адвоката:</h2>
   
       <address>
-        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">вул. Будівельників, 38/14, Київ, Україна</a>
+        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a>
         <a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83 </a>
       </address>
     </div>
@@ -160,14 +155,14 @@
       </li>
   
       <li class="nav__item">
-        <h2 class="nav__title">News & Info</h2>
+        <h2 class="nav__title">Прайс на послуги</h2>
   
         <ul class="nav__ul">
           <li>
-            <a href="#">Press Releases</a>
+            <a href="/prices.pdf">Цивільні справи</a>
           </li>
   
-          <li>
+          <!-- <li>
             <a href="#">About Our Products</a>
           </li>
   
@@ -185,7 +180,7 @@
   
           <li>
             <a href="#">Newsletter Sign Up</a>
-          </li>
+          </li> -->
         </ul>
       </li>
   
@@ -201,15 +196,15 @@
             <a href="Зразковий примірник договору.pdf">Завантажити примірник договору</a>
           </li>
   
-          <li>
+          <!-- <li>
             <a href="#">Forums</a>
-          </li>
+          </li> -->
         </ul>
       </li>
     </ul>
   
     <div class="legal">
-      <p>&copy; 2022 Copyright.</p>
+      <p>&copy; 2019-2022 Всі права захищені.</p>
   
     </div>
   </footer>
