--- a/publ.html
+++ b/publ.html
@@ -675,7 +675,7 @@
       <h2>Адреса офісу та контактний номер адвоката:</h2>
   
       <address>
-        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">вул. Будівельників, 38/14, Київ, Україна</a>
+        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a>
         <a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a>
       </address>
     </div>
@@ -704,14 +704,14 @@
       </li>
   
       <li class="nav__item">
-        <h2 class="nav__title">News & Info</h2>
+        <h2 class="nav__title">Прайс на послуги</h2>
   
         <ul class="nav__ul">
           <li>
-            <a href="#">Press Releases</a>
+            <a href="/prices.pdf">Цивільні справи</a>
           </li>
   
-          <li>
+          <!-- <li>
             <a href="#">About Our Products</a>
           </li>
   
@@ -729,7 +729,7 @@
   
           <li>
             <a href="#">Newsletter Sign Up</a>
-          </li>
+          </li> -->
         </ul>
       </li>
   
@@ -745,15 +745,15 @@
             <a href="Зразковий примірник договору.pdf">Завантажити примірник договору</a>
           </li>
   
-          <li>
+          <!-- <li>
             <a href="#">Forums</a>
-          </li>
+          </li> -->
         </ul>
       </li>
     </ul>
   
     <div class="legal">
-      <p>&copy; 2022 Copyright.</p>
+      <p>&copy; 2019-2022 Всі права захищені.</p>
   
     </div>
   </footer>
