--- a/poslygu.html
+++ b/poslygu.html
@@ -94,7 +94,7 @@
             <div class="card-body">
               <h5 class="card-title">Житлове право</h5>
               <p class="card-text">
-                Якщо виникла загроза позбутись житла, свої права необхідно захищати. Найбільш типові справи в сфері житлового права визнання права власності на житло, в тому числі в порядку спадкування; розірвання договору обміну, дарування, ренти, купівлі-продажу, безоплатного користування, найму, оренди житла та інших; майнові права подружжя на квартиру; оскарження відмови в реєстрації громадянина за місцем проживання, приватизації житла тощо; вселення в житлове приміщення та виселення з нього.
+                Найбільш типові справи в сфері житлового права: визнання права власності на житло, в тому числі в порядку спадкування; розірвання договору обміну, дарування, ренти, купівлі-продажу, безоплатного користування, найму, оренди житла та інших; майнові права подружжя на квартиру; оскарження відмови в реєстрації громадянина за місцем проживання, приватизації житла тощо; вселення в житлове приміщення та виселення з нього.
               </p>
               <a href="tel:+380508538483" target="_blank" class="btn btn-primary"
                 >Замовити послугу</a
@@ -108,7 +108,7 @@
             <div class="card-body">
               <h5 class="card-title">Оскарження виконавчого напису</h5>
               <p class="card-text">
-                Протягом останніх двох років фінансові та колекторські компанії масово змушують боржників повертати кредитні борги на підставі нотаріальних написів. На підставі свого досвіду та аналізу судової практики я допоможу вам розібратися з усіма правовими нюансами стосовно нотаріального напису. Ми чітко окреслимо обґрунтування визнання даного виконавчого документа незаконним у суді.
+                Протягом останніх двох років фінансові та колекторські компанії масово змушують боржників повертати кредитні борги на підставі нотаріальних написів. На підставі свого досвіду та аналізу судової практики я допоможу вам розібратися з усіма правовими нюансами стосовно нотаріального напису. Ми чітко окреслимо обґрунтування визнання даного виконавчого документа незаконним.
               </p>
               <a href="tel:+380508538483" target="_blank" class="btn btn-primary"
                 >Замовити послугу</a
