--- a/poslygu.html
+++ b/poslygu.html
@@ -106,7 +106,7 @@
           <div class="card">
             <img src="/IMG/3.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Оскарження виконавчого напису</h5>
+              <h5 class="card-title">Оскарження виконавчого напису нотаріуса</h5>
               <p class="card-text">
                 Протягом останніх двох років фінансові та колекторські компанії масово змушують боржників повертати кредитні борги на підставі нотаріальних написів. На підставі свого досвіду та аналізу судової практики я допоможу вам розібратися з усіма правовими нюансами стосовно нотаріального напису. Ми чітко окреслимо обґрунтування визнання даного виконавчого документа незаконним.
               </p>
