--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <script> alert("Сайт у розробці. Функціонал сайту обмежений."); </script> 
     <link
       class="logo"
       rel="apple-touch-icon"
@@ -62,7 +64,10 @@
               <a class="nav-link" href="publ.html">ПУБЛІКАЦІЇ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="poslygu.html">ПРАКТИКИ</a>
+              <a class="nav-link" href="practice.html">ПРАКТИКИ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="services.html">ПОСЛУГИ</a>
             </li>
           </ul>
         </div>
