--- a/publ.html
+++ b/publ.html
@@ -74,7 +74,7 @@
               <a class="nav-link" href="practice.html">ПРАКТИКИ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="services.html">ПОСЛУГИ</a>
+              <a class="nav-link" href="services.html">ПОСЛУГИ</a>
             </li>
           </ul>
         </div>
