--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       crossorigin="anonymous"
     ></script>
 
-    <script> alert("Сайт у розробці. Функціонал сайту обмежений."); </script> 
+    <!-- <script> alert("Сайт у розробці. Функціонал обмежений."); </script>  -->
+
+    <script src="https://kit.fontawesome.com/37d5608a26.js" crossorigin="anonymous"></script>
+
     <link
       class="logo"
       rel="apple-touch-icon"
@@ -76,11 +79,11 @@
     <div class="container text-center my-5">
       <div class="row">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <img
-            class="rounded-img"
+          <figure><img
+            class="rounded-img" id="shine"
             src="IMG/Solo.png"
             alt="адвокат Каленський Владислав"
-          />
+          /></figure>
           <h1 class="fw-light">Адвокат Каленський Владислав</h1>
           <p class="lead" text-muted>
             Персональний сайт приватного адвоката.
@@ -88,27 +91,6 @@
             Цікави кейси, обмін досвідом, авторські юридичні статті та
             правозахистна діяльність.
           </p>
-          <a
-            href="https://www.facebook.com/advkalenskiy"
-            target="_blank"
-            class="btn btn-secondary"
-          >
-            Facebook
-          </a>
-          <a
-            href="https://www.instagram.com/kalenskiy_advocate/"
-            target="_blank"
-            class="btn btn-secondary"
-          >
-            Instagram
-          </a>
-          <a
-            href="https://t.me/adv_kalenskiy"
-            target="_blank"
-            class="btn btn-secondary"
-          >
-            Telegram
-          </a>
         </div>
       </div>
     </div>
@@ -120,8 +102,8 @@
       <h2>Адреса офісу та контактний номер адвоката:</h2>
   
       <address>
-        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a>
-        <a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a>
+        <i class="fa-solid fa-location-dot"><a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a></i>
+        <i class="fa-solid fa-phone"><a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a></i>
       </address>
     </div>
   
@@ -131,18 +113,22 @@
   
         <ul class="nav__ul">
           <li>
+            <i class="fa-brands fa-facebook"></i>
             <a href="https://www.facebook.com/advkalenskiy/">Facebook</a>
           </li>
   
           <li>
+            <i class="fa-brands fa-instagram"></i>
             <a href="https://www.instagram.com/kalenskiy_advocate/">Instagram</a>
           </li>
   
           <li>
+            <i class="fa-brands fa-telegram"></i>
             <a href="https://t.me/adv_kalenskiy">Telegram</a>
           </li>
 
           <li>
+            <i class="fa-brands fa-twitter"></i>
             <a href="https://twitter.com/adv_kalenskiy">Twitter</a>
           </li>
         </ul>
