--- a/practice.html
+++ b/practice.html
@@ -16,6 +16,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/37d5608a26.js" crossorigin="anonymous"></script>
     <link
       class="logo"
       rel="apple-touch-icon"
@@ -129,8 +130,8 @@
       <h2>Адреса офісу та контактний номер адвоката:</h2>
   
       <address>
-        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a>
-        <a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83 </a>
+        <i class="fa-solid fa-location-dot"><a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a></i>
+        <i class="fa-solid fa-phone"><a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a></i>
       </address>
     </div>
   
@@ -140,18 +141,22 @@
   
         <ul class="nav__ul">
           <li>
+            <i class="fa-brands fa-facebook"></i>
             <a href="https://www.facebook.com/advkalenskiy/">Facebook</a>
           </li>
   
           <li>
+            <i class="fa-brands fa-instagram"></i>
             <a href="https://www.instagram.com/kalenskiy_advocate/">Instagram</a>
           </li>
   
           <li>
+            <i class="fa-brands fa-telegram"></i>
             <a href="https://t.me/adv_kalenskiy">Telegram</a>
           </li>
 
           <li>
+            <i class="fa-brands fa-twitter"></i>
             <a href="https://twitter.com/adv_kalenskiy">Twitter</a>
           </li>
         </ul>
