--- a/publ.html
+++ b/publ.html
@@ -642,6 +642,17 @@
         allowfullscreen="true"
         allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
       ></iframe>
+      <iframe 
+      class="posts_posts"
+      src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fadvkalenskiy%2Fposts%2Fpfbid02qJFpRoenqfKSzEYjQyicEeQX5HSQ94edG23L7FYoZ4bqe1ffK9C4m87qT1roC6zFl&show_text=true&width=500" 
+      width="500" 
+      height="378" 
+      style="border:none;overflow:hidden" 
+      scrolling="no" 
+      frameborder="0" 
+      allowfullscreen="true" 
+      allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+    </iframe>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">↑↑↑</button>
     <script>
@@ -670,6 +681,7 @@
         document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
       }
     </script>
+    <script src="https://kit.fontawesome.com/37d5608a26.js" crossorigin="anonymous"></script>
   </body>
   <footer class="footer">
     <div class="footer__addr">
@@ -678,8 +690,8 @@
       <h2>Адреса офісу та контактний номер адвоката:</h2>
   
       <address>
-        <a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a>
-        <a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a>
+        <i class="fa-solid fa-location-dot"><a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a></i>
+        <i class="fa-solid fa-phone"><a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a></i>
       </address>
     </div>
   
@@ -689,18 +701,22 @@
   
         <ul class="nav__ul">
           <li>
+            <i class="fa-brands fa-facebook"></i>
             <a href="https://www.facebook.com/advkalenskiy/">Facebook</a>
           </li>
   
           <li>
+            <i class="fa-brands fa-instagram"></i>
             <a href="https://www.instagram.com/kalenskiy_advocate/">Instagram</a>
           </li>
   
           <li>
+            <i class="fa-brands fa-telegram"></i>
             <a href="https://t.me/adv_kalenskiy">Telegram</a>
           </li>
 
           <li>
+            <i class="fa-brands fa-twitter"></i>
             <a href="https://twitter.com/adv_kalenskiy">Twitter</a>
           </li>
         </ul>
