--- a/practice.html
+++ b/practice.html
@@ -197,10 +197,12 @@
   
         <ul class="nav__ul">
           <li>
+            <i class="fa-solid fa-envelope"></i>
             <a href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
           </li>
   
           <li>
+            <i class="fa-solid fa-download"></i>
             <a href="Зразковий примірник договору.pdf">Завантажити примірник договору</a>
           </li>
   
