--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@
       <div class="cardz card-5">
         <div class="card__icon"><i class="fas fa-bolt"></i></div>
         <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Пошук виконавчих проваджень</h2>
+        <h2 class="card__title">Пошук відкритих виконавчих проваджень</h2>
         <p class="card__apply">
           <a class="card__link" href="tel:+380508538483">Замовити <i class="fas fa-arrow-right"></i></a>
         </p>
@@ -198,10 +198,12 @@
   
         <ul class="nav__ul">
           <li>
+            <i class="fa-solid fa-envelope"></i>
             <a href="mailto:kalensky_advokat@icloud.com">Надіслати лист</a>
           </li>
   
           <li>
+            <i class="fa-solid fa-download"></i>
             <a href="Зразковий примірник договору.pdf">Завантажити примірник договору</a>
           </li>
   
