--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
-    ></script>
-
-    <!-- <script> alert("Сайт у розробці. Функціонал обмежений."); </script>  -->
+    ></script> -->
 
     <script src="https://kit.fontawesome.com/37d5608a26.js" crossorigin="anonymous"></script>
 
@@ -98,9 +96,6 @@
   <footer class="footer">
     <div class="footer__addr">
       <h1 class="footer__logo">Адвокат Каленський Владислав</h1>
-  
-      <h2>Адреса офісу та контактний номер адвоката:</h2>
-  
       <address>
         <i class="fa-solid fa-location-dot"><a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a></i>
         <i class="fa-solid fa-phone"><a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a></i>
