--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
       <div class="cardz card-2">
         <div class="card__icon"><i class="fas fa-bolt"></i></div>
         <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Перевірка в реєстрі боржників</h2>
+        <h2 class="card__title">Перевірка справ в судовому реєстрі</h2>
         <p class="card__apply">
           <a class="card__link" href="tel:+380508538483">Замовити <i class="fas fa-arrow-right"></i></a>
         </p>
@@ -96,7 +96,15 @@
       <div class="cardz card-3">
         <div class="card__icon"><i class="fas fa-bolt"></i></div>
         <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Перевірка в судовому реєстрі</h2>
+        <h2 class="card__title">Перевірка в реєстрі боржників</h2>
+        <p class="card__apply">
+          <a class="card__link" href="tel:+380508538483">Замовити <i class="fas fa-arrow-right"></i></a>
+        </p>
+      </div>
+      <div class="cardz card-4">
+        <div class="card__icon"><i class="fas fa-bolt"></i></div>
+        <p class="card__exit"><i class="fas fa-times"></i></p>
+        <h2 class="card__title">Пошук відкритих виконавчих проваджень</h2>
         <p class="card__apply">
           <a class="card__link" href="tel:+380508538483">Замовити <i class="fas fa-arrow-right"></i></a>
         </p>
@@ -104,7 +112,15 @@
       <div class="cardz card-5">
         <div class="card__icon"><i class="fas fa-bolt"></i></div>
         <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="card__title">Пошук відкритих виконавчих проваджень</h2>
+        <h2 class="card__title">Зупинити виконавче провадження</h2>
+        <p class="card__apply">
+          <a class="card__link" href="tel:+380508538483">Замовити <i class="fas fa-arrow-right"></i></a>
+        </p>
+      </div>
+      <div class="cardz card-6">
+        <div class="card__icon"><i class="fas fa-bolt"></i></div>
+        <p class="card__exit"><i class="fas fa-times"></i></p>
+        <h2 class="card__title">Закінчити виконавче провадження</h2>
         <p class="card__apply">
           <a class="card__link" href="tel:+380508538483">Замовити <i class="fas fa-arrow-right"></i></a>
         </p>
