--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-
     <script src="https://kit.fontawesome.com/37d5608a26.js" crossorigin="anonymous"></script>
-
     <link
       class="logo"
       rel="apple-touch-icon"
@@ -41,7 +39,7 @@
     />
     <link rel="manifest" href="/IMG/site.webmanifest" />
   </head>
-  <body>
+  <body class="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand p-0" href="/">
