--- a/services.html
+++ b/services.html
@@ -141,6 +141,7 @@
       <address>
         <i class="fa-solid fa-location-dot"><a class="footer__btn"href="https://goo.gl/maps/3XuUgS6rv9FezaHS9">м. Київ, вул. Будівельників, 38/14</a></i>
         <i class="fa-solid fa-phone"><a class="footer__btn" href="tel:+380508538483">+38 (050) 853 84 83</a></i>
+        <i class="fa-solid"><a class="footer__btn" href="https://kalenskiy.com.ua/">Адвокат по розлученням Київ</a></i>
       </address>
     </div>
   
